Adicionado conteúdo corpo

--- a/index.html
+++ b/index.html
@@ -37,7 +37,28 @@
         <div class="gradient"></div>    
     </header>
     <main class="corpo">
-
+        <section class="info-box">
+            <a href="#" class="box-corpo">
+                <img src="_images/img-box-corpo.png" alt="">
+                <h1>SERVICE TITLE</h1>
+                <p>Vestassapede et donec ut est libe ros sus et eget sed eget quisq ueta habitur augue</p>
+            </a>
+            <a href="#" class="box-corpo">
+                <img src="_images/img-box-corpo.png" alt="">
+                <h1>SERVICE TITLE</h1>
+                <p>Vestassapede et donec ut est libe ros sus et eget sed eget quisq ueta habitur augue</p>
+            </a>
+            <a href="#" class="box-corpo">
+                <img src="_images/img-box-corpo.png" alt="">
+                <h1>SERVICE TITLE</h1>
+                <p>Vestassapede et donec ut est libe ros sus et eget sed eget quisq ueta habitur augue</p>
+            </a>
+            <a href="#" class="box-corpo">
+                <img src="_images/img-box-corpo.png" alt="">
+                <h1>SERVICE TITLE</h1>
+                <p>Vestassapede et donec ut est libe ros sus et eget sed eget quisq ueta habitur augue</p>
+            </a>
+        </section>
     </main>
 </body>
 </html>
