Pequenas correções no CSS

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <p>Vestassapede et donec ut est libe ros sus et eget sed eget quisq ueta habitur augue</p>
             </a>
         </section>
-        <div class="titulo">
+        <div class="div-bg">
             <span>LATEST WORK</span>
         </div>
         <section>
