Alteração do banner

--- a/index.html
+++ b/index.html
@@ -23,19 +23,20 @@
                     <li><a href="">gallery</a></li>
                 </ul>
             </nav>
+        </section>
+        <section class="container">
             <div class="banner">
-                <div class="text-info">
-                    <h1>Cursus penati saccum nulla.</h1>
-                    <p>Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna. Urnaultrices quis curabitur phasellentesque congue magnis vestibulum quismodo nulla et feugiat adipiscinia pellentum leo.</p>
-                    <a href="#">Read More Here >></a>
-                </div>
-                <div class="img-banner">
-                    <div class="img-circulo"></div>
-                </div>
+                <div class="div-banner1 flex-1"></div>
+                <div class="div-banner2 flex-1"></div>
+                <div class="div-banner3 flex-1"></div>
+                <div class="div-banner4 flex-1"></div>
+                <div class="div-banner5 flex-1"></div>
             </div>
         </section>
-        <div class="gradient"></div>    
     </header>
+
+    <div class="gradient"></div>    
+
     <main class="corpo">
         <section class="info-box">
             <a href="#" class="box-corpo">
