--- a/index.html
+++ b/index.html
@@ -63,13 +63,86 @@
         <div class="div-bg">
             <span>LATEST WORK</span>
         </div>
-        <section>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
+        <section class="gallery">
+            <div class="grid-container">
+                <a href="">
+                    <div class="item1">
+                        <img src="_images/gallery/img1.bmp" alt="">
+                        <div class="legenda">LOREM IPSUM DOLOR</div>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="item1">
+                        <img src="_images/gallery/img1.bmp" alt="">
+                        <div class="legenda">LOREM IPSUM DOLOR</div>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="item1">
+                        <img src="_images/gallery/img1.bmp" alt="">
+                        <div class="legenda">LOREM IPSUM DOLOR</div>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="item1">
+                        <img src="_images/gallery/img1.bmp" alt="">
+                        <div class="legenda">LOREM IPSUM DOLOR</div>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="item1">
+                        <img src="_images/gallery/img1.bmp" alt="">
+                        <div class="legenda">LOREM IPSUM DOLOR</div>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="item1">
+                        <img src="_images/gallery/img1.bmp" alt="">
+                        <div class="legenda">LOREM IPSUM DOLOR</div>
+                    </div>
+                </a>
+            </div>
         </section>
     </main>
+
+    <div class="final">
+        <section class="menu-footer">
+            <div class="sec1">
+                <h1>From The Blog</h1>
+                <h2>Post Title</h2>
+                <h3><span>Admin</span>, domainname.com</h3>
+                <h4>Friday, 6th April 2000</h4>
+                <p>Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed. Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt. Namjusto cras urna urnaretra lor urna neque sed quis orci nulla.</p>
+                <a href="#">Read More &raquo;</a>
+            </div>
+            <div class="sec2">
+                <h1>Quick Links</h1>
+                <ul>
+                    <li><span>&raquo;</span> Lorem ipsum dolor sit</li>
+                    <li><span>&raquo;</span> Amet consectetur</li>
+                    <li><span>&raquo;</span> Praesent vel sem id</li>
+                    <li><span>&raquo;</span> Curabitur hendrerit est</li>
+                    <li><span>&raquo;</span>Aliquam eget erat nec sapien</li>
+                    <li><span>&raquo;</span> Cras id augue nunc</li>
+                    <li><span>&raquo;</span> Sed a nulla urna</li>
+                </ul>
+            </div>
+            <div class="sec3">
+                <h1>Latest Tweets</h1>
+                <p><span>@namehere</span> Justoid nonummy laoreet phasellent penatoque in antesque pellus elis eget tincidunt. Nequatdui laorem justo a non tellus laoremut vitae doloreet 1 day ago</p>
+                <p><span>@namehere</span> Justoid nonummy laoreet phasellent penatoque in antesque pellus elis eget tincidunt. Nequatdui laorem justo a non tellus laoremut vitae doloreet 1 day ago</p>
+            </div>
+            <div class="sec4">
+                <h1>Contact Us</h1>
+                <form action="">
+                    <input type="text" name="name" placeholder="Full Name">
+                    <input type="email" name="email" placeholder="Email Address">
+                    <input type="text" name="subject" placeholder="Subject">
+                    <textarea name="textarea" placeholder="Message"></textarea>
+                    <button>SUBMIT</button>
+                </form>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
