--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <li><span>&raquo;</span> Amet consectetur</li>
                     <li><span>&raquo;</span> Praesent vel sem id</li>
                     <li><span>&raquo;</span> Curabitur hendrerit est</li>
-                    <li><span>&raquo;</span>Aliquam eget erat nec sapien</li>
+                    <li><span>&raquo;</span> Aliquam eget erat nec sapien</li>
                     <li><span>&raquo;</span> Cras id augue nunc</li>
                     <li><span>&raquo;</span> Sed a nulla urna</li>
                 </ul>
@@ -144,5 +144,14 @@
             </div>
         </section>
     </div>
+
+    <footer>
+        <section class="rodape">
+            <div class="content">
+                <div class="copy">Copyright &copy; 2020 Kalel Santana - All Rights Reserved</div>
+                <div class="template">Template by OS Templates</div>
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
